tests/ui/rfcs/rfc-2008-non-exhaustive/invalid-attribute.stderr
error[E0565]: malformed `non_exhaustive` attribute input
  --> $DIR/invalid-attribute.rs:1:1
   |
LL | #[non_exhaustive(anything)]
   | ^^^^^^^^^^^^^^^^----------^
   |                 |
   |                 didn't expect any arguments here
   |
help: must be of the form
   |
LL - #[non_exhaustive(anything)]
LL + #[non_exhaustive]
   |

error: the `non_exhaustive` attribute cannot be used on traits
  --> $DIR/invalid-attribute.rs:5:3
   |
LL | #[non_exhaustive]
   |   ^^^^^^^^^^^^^^
   |
   = help: the `non_exhaustive` attribute can be applied to data types and enum variants

error: the `non_exhaustive` attribute cannot be used on unions
  --> $DIR/invalid-attribute.rs:9:3
   |
LL | #[non_exhaustive]
   |   ^^^^^^^^^^^^^^
   |
   = help: the `non_exhaustive` attribute can be applied to enum variants, enums, and structs

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0565`.
